<?xml version="1.0" encoding="utf-8"?>
<!--질문 1-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4C076"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/q1_3"
        android:textSize="25sp"
        android:paddingHorizontal="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_weight="3"
        android:gravity="center">
        <Button
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/a1_3_1"/>
        <Button
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/a1_3_2"/>
        <Button
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/a1_3_3"/>
        <Button
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/a1_3_4"/>
        <Button
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/a1_3_5"/>
    </LinearLayout>
</LinearLayout>