<?xml version="1.0" encoding="utf-8"?>
<!--질문 1-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:gravity="center"
    android:text="@string/q1_1"
    android:textColor="@color/black"
    android:textSize="25dp"
    android:textStyle="normal"
    android:paddingHorizontal="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_weight="3"
        android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:gravity="center"
            android:fontFamily="@font/godom"
            android:text="@string/a1_1_1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:gravity="center"
            android:fontFamily="@font/godom"
            android:text="@string/a1_1_2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:gravity="center"
            android:fontFamily="@font/godom"
            android:text="@string/a1_1_3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_round_corners"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:gravity="center"
            android:fontFamily="@font/godom"
            android:text="@string/a1_1_4"/>
<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="70dp"-->
<!--            android:background="@drawable/button_round_corners"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16dp"-->
<!--            android:gravity="center"-->
<!--            android:fontFamily="@font/godom"-->
<!--            android:text="@string/"/>-->
    </LinearLayout>
</LinearLayout>